// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden: events point-reads & existence family > getAgentGraphDataFromEventsTable 1`] = `
[
  {
    "fn": "queryClickhouse",
    "params": {
      "param1": "golden-project",
      "param2": "golden-trace",
      "param3": "2026-01-01 00:00:00.000",
      "param4": "2026-01-01 01:00:00.000",
    },
    "route": "unknown",
    "sql": "SELECT
    e.span_id AS id,
    e.parent_span_id AS parent_observation_id,
    e.type AS type,
    e.name AS name,
    e.start_time AS start_time,
    e.end_time AS end_time,
    mapFromArrays(arrayReverse(e.metadata_names), arrayReverse(e.metadata_values))['langgraph_node'] AS node,
    mapFromArrays(arrayReverse(e.metadata_names), arrayReverse(e.metadata_values))['langgraph_step'] AS step
FROM events_core AS e
WHERE (e.project_id = {param1:String}) AND (e.trace_id = {param2:String}) AND (e.start_time >= {param3:DateTime64(3)}) AND (e.start_time <= {param4:DateTime64(3)})",
  },
]
`;

exports[`golden: events point-reads & existence family > getLastTraceTimestampsByProjectsFromEventsTable projectIds=empty 1`] = `[]`;

exports[`golden: events point-reads & existence family > getLastTraceTimestampsByProjectsFromEventsTable projectIds=many 1`] = `
[
  {
    "fn": "queryClickhouse",
    "params": {
      "param1": [
        "golden-project",
        "golden-project-b",
      ],
    },
    "route": "unknown",
    "sql": "SELECT
    project_id,
    max(start_time) AS last_trace_at
FROM events_core
WHERE (project_id IN ({param1:Array(String)})) AND (start_time >= (now() - toIntervalDay(30))) AND (is_deleted = 0)
GROUP BY project_id",
  },
]
`;

exports[`golden: events point-reads & existence family > getLastTraceTimestampsByProjectsFromEventsTable projectIds=one 1`] = `
[
  {
    "fn": "queryClickhouse",
    "params": {
      "param1": [
        "golden-project",
      ],
    },
    "route": "unknown",
    "sql": "SELECT
    project_id,
    max(start_time) AS last_trace_at
FROM events_core
WHERE (project_id IN ({param1:Array(String)})) AND (start_time >= (now() - toIntervalDay(30))) AND (is_deleted = 0)
GROUP BY project_id",
  },
]
`;

exports[`golden: events point-reads & existence family > getObservationByIdFromEventsTable base 1`] = `
[
  {
    "fn": "queryClickhouse",
    "params": {
      "param1": "golden-project",
      "param2": "golden-span",
      "param3": 1,
    },
    "route": "unknown",
    "sql": "SELECT
    e.span_id AS id,
    e.trace_id AS trace_id,
    e.project_id AS project_id,
    e.environment AS environment,
    e.type AS type,
    e.parent_span_id AS parent_observation_id,
    e.start_time AS start_time,
    e.end_time AS end_time,
    e.name AS name,
    mapFromArrays(arrayReverse(e.metadata_names), arrayReverse(e.metadata_values)) AS metadata,
    e.level AS level,
    e.status_message AS status_message,
    e.version AS version,
    e.release AS release,
    e.user_id AS user_id,
    e.session_id AS session_id,
    ifNull(
        COALESCE(
            nullIf(e.trace_name, ''),
            if((e.parent_span_id = '') OR (e.is_app_root = true), nullIf(e.name, ''), NULL)
        ),
        ''
    ) AS trace_name,
    e.tags AS tags,
    e.bookmarked AS bookmarked,
    e.public AS public,
    e.tool_definitions AS tool_definitions,
    e.tool_calls AS tool_calls,
    e.tool_call_names AS tool_call_names,
    e.provided_model_name AS provided_model_name,
    e.model_id AS internal_model_id,
    e.model_parameters AS model_parameters,
    e.provided_usage_details AS provided_usage_details,
    e.usage_details AS usage_details,
    e.provided_cost_details AS provided_cost_details,
    e.cost_details AS cost_details,
    e.total_cost AS total_cost,
    e.usage_pricing_tier_id AS usage_pricing_tier_id,
    e.usage_pricing_tier_name AS usage_pricing_tier_name,
    e.completion_start_time AS completion_start_time,
    e.prompt_id AS prompt_id,
    e.prompt_name AS prompt_name,
    e.prompt_version AS prompt_version,
    e.created_at AS created_at,
    e.updated_at AS updated_at,
    e.event_ts
FROM events_core AS e
WHERE (e.project_id = {param1:String}) AND (span_id = {param2:String})
ORDER BY
    start_time DESC,
    event_ts DESC
LIMIT {param3:Int64}",
  },
]
`;

exports[`golden: events point-reads & existence family > getObservationByIdFromEventsTable io=full 1`] = `
[
  {
    "fn": "queryClickhouse",
    "params": {
      "param1": "golden-project",
      "param2": "golden-span",
      "param3": 1,
    },
    "route": "unknown",
    "sql": "SELECT
    e.span_id AS id,
    e.trace_id AS trace_id,
    e.project_id AS project_id,
    e.environment AS environment,
    e.type AS type,
    e.parent_span_id AS parent_observation_id,
    e.start_time AS start_time,
    e.end_time AS end_time,
    e.name AS name,
    mapFromArrays(arrayReverse(e.metadata_names), arrayReverse(e.metadata_values)) AS metadata,
    e.level AS level,
    e.status_message AS status_message,
    e.version AS version,
    e.release AS release,
    e.user_id AS user_id,
    e.session_id AS session_id,
    ifNull(
        COALESCE(
            nullIf(e.trace_name, ''),
            if((e.parent_span_id = '') OR (e.is_app_root = true), nullIf(e.name, ''), NULL)
        ),
        ''
    ) AS trace_name,
    e.tags AS tags,
    e.bookmarked AS bookmarked,
    e.public AS public,
    e.tool_definitions AS tool_definitions,
    e.tool_calls AS tool_calls,
    e.tool_call_names AS tool_call_names,
    e.provided_model_name AS provided_model_name,
    e.model_id AS internal_model_id,
    e.model_parameters AS model_parameters,
    e.provided_usage_details AS provided_usage_details,
    e.usage_details AS usage_details,
    e.provided_cost_details AS provided_cost_details,
    e.cost_details AS cost_details,
    e.total_cost AS total_cost,
    e.usage_pricing_tier_id AS usage_pricing_tier_id,
    e.usage_pricing_tier_name AS usage_pricing_tier_name,
    e.completion_start_time AS completion_start_time,
    e.prompt_id AS prompt_id,
    e.prompt_name AS prompt_name,
    e.prompt_version AS prompt_version,
    e.created_at AS created_at,
    e.updated_at AS updated_at,
    e.event_ts,
    input,
    output
FROM events_full AS e
WHERE (e.project_id = {param1:String}) AND (span_id = {param2:String})
ORDER BY
    start_time DESC,
    event_ts DESC
LIMIT {param3:Int64}",
  },
]
`;

exports[`golden: events point-reads & existence family > getObservationByIdFromEventsTable io=truncated 1`] = `
[
  {
    "fn": "queryClickhouse",
    "params": {
      "param1": "golden-project",
      "param2": "golden-span",
      "param3": 1,
    },
    "route": "unknown",
    "sql": "SELECT
    e.span_id AS id,
    e.trace_id AS trace_id,
    e.project_id AS project_id,
    e.environment AS environment,
    e.type AS type,
    e.parent_span_id AS parent_observation_id,
    e.start_time AS start_time,
    e.end_time AS end_time,
    e.name AS name,
    mapFromArrays(arrayReverse(e.metadata_names), arrayReverse(e.metadata_values)) AS metadata,
    e.level AS level,
    e.status_message AS status_message,
    e.version AS version,
    e.release AS release,
    e.user_id AS user_id,
    e.session_id AS session_id,
    ifNull(
        COALESCE(
            nullIf(e.trace_name, ''),
            if((e.parent_span_id = '') OR (e.is_app_root = true), nullIf(e.name, ''), NULL)
        ),
        ''
    ) AS trace_name,
    e.tags AS tags,
    e.bookmarked AS bookmarked,
    e.public AS public,
    e.tool_definitions AS tool_definitions,
    e.tool_calls AS tool_calls,
    e.tool_call_names AS tool_call_names,
    e.provided_model_name AS provided_model_name,
    e.model_id AS internal_model_id,
    e.model_parameters AS model_parameters,
    e.provided_usage_details AS provided_usage_details,
    e.usage_details AS usage_details,
    e.provided_cost_details AS provided_cost_details,
    e.cost_details AS cost_details,
    e.total_cost AS total_cost,
    e.usage_pricing_tier_id AS usage_pricing_tier_id,
    e.usage_pricing_tier_name AS usage_pricing_tier_name,
    e.completion_start_time AS completion_start_time,
    e.prompt_id AS prompt_id,
    e.prompt_name AS prompt_name,
    e.prompt_version AS prompt_version,
    e.created_at AS created_at,
    e.updated_at AS updated_at,
    e.event_ts,
    leftUTF8(input, 1000) AS input,
    leftUTF8(output, 1000) AS output
FROM events_core AS e
WHERE (e.project_id = {param1:String}) AND (span_id = {param2:String})
ORDER BY
    start_time DESC,
    event_ts DESC
LIMIT {param3:Int64}",
  },
]
`;

exports[`golden: events point-reads & existence family > getObservationByIdFromEventsTable startTime+type+traceId 1`] = `
[
  {
    "fn": "queryClickhouse",
    "params": {
      "param1": "golden-project",
      "param2": "golden-span",
      "param3": "2026-01-01 00:00:00.000",
      "param4": "2025-12-01 00:00:00.000",
      "param5": "GENERATION",
      "param6": "golden-trace",
      "param7": 1,
    },
    "route": "unknown",
    "sql": "SELECT
    e.span_id AS id,
    e.trace_id AS trace_id,
    e.project_id AS project_id,
    e.environment AS environment,
    e.type AS type,
    e.parent_span_id AS parent_observation_id,
    e.start_time AS start_time,
    e.end_time AS end_time,
    e.name AS name,
    mapFromArrays(arrayReverse(e.metadata_names), arrayReverse(e.metadata_values)) AS metadata,
    e.level AS level,
    e.status_message AS status_message,
    e.version AS version,
    e.release AS release,
    e.user_id AS user_id,
    e.session_id AS session_id,
    ifNull(
        COALESCE(
            nullIf(e.trace_name, ''),
            if((e.parent_span_id = '') OR (e.is_app_root = true), nullIf(e.name, ''), NULL)
        ),
        ''
    ) AS trace_name,
    e.tags AS tags,
    e.bookmarked AS bookmarked,
    e.public AS public,
    e.tool_definitions AS tool_definitions,
    e.tool_calls AS tool_calls,
    e.tool_call_names AS tool_call_names,
    e.provided_model_name AS provided_model_name,
    e.model_id AS internal_model_id,
    e.model_parameters AS model_parameters,
    e.provided_usage_details AS provided_usage_details,
    e.usage_details AS usage_details,
    e.provided_cost_details AS provided_cost_details,
    e.cost_details AS cost_details,
    e.total_cost AS total_cost,
    e.usage_pricing_tier_id AS usage_pricing_tier_id,
    e.usage_pricing_tier_name AS usage_pricing_tier_name,
    e.completion_start_time AS completion_start_time,
    e.prompt_id AS prompt_id,
    e.prompt_name AS prompt_name,
    e.prompt_version AS prompt_version,
    e.created_at AS created_at,
    e.updated_at AS updated_at,
    e.event_ts
FROM events_core AS e
WHERE (e.project_id = {param1:String}) AND (span_id = {param2:String}) AND (toStartOfMinute(start_time) = toStartOfMinute({param3:DateTime64(3)})) AND (start_time >= ({param4:DateTime64(3)} - toIntervalDay(2))) AND (type = {param5:String}) AND (trace_id = {param6:String})
ORDER BY
    start_time DESC,
    event_ts DESC
LIMIT {param7:Int64}",
  },
]
`;

exports[`golden: events point-reads & existence family > getObservationsTraceIdsFromEventsTable 1`] = `
[
  {
    "fn": "queryClickhouse",
    "params": {
      "param1": "golden-project",
      "param2": [
        "golden-span",
        "golden-span-b",
      ],
    },
    "route": "unknown",
    "sql": "SELECT
    e.trace_id AS trace_id,
    e.span_id AS span_id
FROM events_core AS e
WHERE (e.project_id = {param1:String}) AND (e.span_id IN ({param2:Array(String)}))",
  },
]
`;

exports[`golden: events point-reads & existence family > getTraceByIdFromEventsTable base 1`] = `
[
  {
    "fn": "queryClickhouse",
    "params": {
      "param1": "golden-project",
      "param2": [
        "golden-trace",
      ],
      "param3": 1,
    },
    "route": "unknown",
    "sql": "WITH traces AS
    (
        SELECT
            trace_id AS id,
            project_id,
            COALESCE(
                nullIf(argMaxIf(e.trace_name, e.event_ts, e.trace_name != ''), ''),
                nullIf(
                    argMaxIf(e.name, e.event_ts, ((e.parent_span_id = '') OR (e.is_app_root = true)) AND (e.name != '')),
                    ''
                )
            ) AS name,
            min(start_time) AS timestamp,
            argMaxIf(environment, event_ts, environment != '') AS environment,
            argMaxIf(version, event_ts, version != '') AS version,
            argMaxIf(session_id, event_ts, session_id != '') AS session_id,
            argMaxIf(user_id, event_ts, user_id != '') AS user_id,
            argMaxIf(input, event_ts, parent_span_id = '') AS input,
            argMaxIf(output, event_ts, parent_span_id = '') AS output,
            argMaxIf(
                mapFromArrays(arrayReverse(e.metadata_names), arrayReverse(e.metadata_values)),
                event_ts,
                parent_span_id = ''
            ) AS metadata,
            min(created_at) AS created_at,
            max(updated_at) AS updated_at,
            sum(total_cost) AS total_cost,
            if(
                max(end_time) IS NULL,
                NULL,
                dateDiff('millisecond', min(start_time), greatest(max(start_time), max(end_time)))
            ) AS latency_milliseconds,
            groupUniqArrayIf(span_id, span_id != '') AS observation_ids,
            length(
                groupUniqArrayIf(span_id, (span_id != '') AND (span_id != concat('t-', trace_id)))
            ) AS observation_count,
            argMaxIf(bookmarked, event_ts, parent_span_id = '') AS bookmarked,
            max(public) AS public,
            argMaxIf(experiment_item_id, event_ts, experiment_item_id != '') AS experiment_item_id,
            sumMap(usage_details) AS usage_details,
            sumMap(cost_details) AS cost_details,
            multiIf(
                arrayExists(x -> (x = 'ERROR'), groupArray(level)),
                'ERROR',
                arrayExists(x -> (x = 'WARNING'), groupArray(level)),
                'WARNING',
                arrayExists(x -> (x = 'DEFAULT'), groupArray(level)),
                'DEFAULT',
                'DEBUG'
            ) AS aggregated_level,
            countIf(level = 'WARNING') AS warning_count,
            countIf(level = 'ERROR') AS error_count,
            countIf(level = 'DEFAULT') AS default_count,
            countIf(level = 'DEBUG') AS debug_count,
            argMaxIf(tags, event_ts, notEmpty(tags)) AS tags,
            argMaxIf(release, event_ts, release != '') AS release,
            argMaxIf(evaluator_id, event_ts, evaluator_id != '') AS evaluator_id,
            argMaxIf(evaluation_rule_id, event_ts, evaluation_rule_id != '') AS evaluation_rule_id,
            any(experiment_id) AS experiment_id
        FROM events_full AS e
        WHERE (e.project_id = {param1:String}) AND (trace_id IN ({param2:Array(String)}))
        GROUP BY
            trace_id,
            project_id
        ORDER BY timestamp DESC
    )
SELECT
    t.id,
    t.name,
    t.user_id,
    t.release,
    t.version,
    t.project_id,
    t.environment,
    t.public,
    t.bookmarked,
    t.tags,
    t.session_id,
    t.timestamp,
    t.created_at,
    t.updated_at,
    t.metadata,
    0 AS is_deleted,
    t.input,
    t.output
FROM traces AS t
ORDER BY t.timestamp DESC
LIMIT {param3:Int64}",
  },
]
`;

exports[`golden: events point-reads & existence family > getTraceByIdFromEventsTable excludeInputOutput+excludeMetadata 1`] = `
[
  {
    "fn": "queryClickhouse",
    "params": {
      "param1": "golden-project",
      "param2": [
        "golden-trace",
      ],
      "param3": 1,
    },
    "route": "unknown",
    "sql": "WITH traces AS
    (
        SELECT
            trace_id AS id,
            project_id,
            COALESCE(
                nullIf(argMaxIf(e.trace_name, e.event_ts, e.trace_name != ''), ''),
                nullIf(
                    argMaxIf(e.name, e.event_ts, ((e.parent_span_id = '') OR (e.is_app_root = true)) AND (e.name != '')),
                    ''
                )
            ) AS name,
            min(start_time) AS timestamp,
            argMaxIf(environment, event_ts, environment != '') AS environment,
            argMaxIf(version, event_ts, version != '') AS version,
            argMaxIf(session_id, event_ts, session_id != '') AS session_id,
            argMaxIf(user_id, event_ts, user_id != '') AS user_id,
            argMaxIf(input, event_ts, parent_span_id = '') AS input,
            argMaxIf(output, event_ts, parent_span_id = '') AS output,
            argMaxIf(
                mapFromArrays(arrayReverse(e.metadata_names), arrayReverse(e.metadata_values)),
                event_ts,
                parent_span_id = ''
            ) AS metadata,
            min(created_at) AS created_at,
            max(updated_at) AS updated_at,
            sum(total_cost) AS total_cost,
            if(
                max(end_time) IS NULL,
                NULL,
                dateDiff('millisecond', min(start_time), greatest(max(start_time), max(end_time)))
            ) AS latency_milliseconds,
            groupUniqArrayIf(span_id, span_id != '') AS observation_ids,
            length(
                groupUniqArrayIf(span_id, (span_id != '') AND (span_id != concat('t-', trace_id)))
            ) AS observation_count,
            argMaxIf(bookmarked, event_ts, parent_span_id = '') AS bookmarked,
            max(public) AS public,
            argMaxIf(experiment_item_id, event_ts, experiment_item_id != '') AS experiment_item_id,
            sumMap(usage_details) AS usage_details,
            sumMap(cost_details) AS cost_details,
            multiIf(
                arrayExists(x -> (x = 'ERROR'), groupArray(level)),
                'ERROR',
                arrayExists(x -> (x = 'WARNING'), groupArray(level)),
                'WARNING',
                arrayExists(x -> (x = 'DEFAULT'), groupArray(level)),
                'DEFAULT',
                'DEBUG'
            ) AS aggregated_level,
            countIf(level = 'WARNING') AS warning_count,
            countIf(level = 'ERROR') AS error_count,
            countIf(level = 'DEFAULT') AS default_count,
            countIf(level = 'DEBUG') AS debug_count,
            argMaxIf(tags, event_ts, notEmpty(tags)) AS tags,
            argMaxIf(release, event_ts, release != '') AS release,
            argMaxIf(evaluator_id, event_ts, evaluator_id != '') AS evaluator_id,
            argMaxIf(evaluation_rule_id, event_ts, evaluation_rule_id != '') AS evaluation_rule_id,
            any(experiment_id) AS experiment_id
        FROM events_full AS e
        WHERE (e.project_id = {param1:String}) AND (trace_id IN ({param2:Array(String)}))
        GROUP BY
            trace_id,
            project_id
        ORDER BY timestamp DESC
    )
SELECT
    t.id,
    t.name,
    t.user_id,
    t.release,
    t.version,
    t.project_id,
    t.environment,
    t.public,
    t.bookmarked,
    t.tags,
    t.session_id,
    t.timestamp,
    t.created_at,
    t.updated_at,
    map() AS metadata,
    0 AS is_deleted,
    '' AS input,
    '' AS output
FROM traces AS t
ORDER BY t.timestamp DESC
LIMIT {param3:Int64}",
  },
]
`;

exports[`golden: events point-reads & existence family > getTraceByIdFromEventsTable timestamp+fromTimestamp 1`] = `
[
  {
    "fn": "queryClickhouse",
    "params": {
      "param1": "golden-project",
      "param2": [
        "golden-trace",
      ],
      "param3": "2025-12-01 00:00:00.000",
      "param4": "2026-01-01 00:00:00.000",
      "param5": 1,
    },
    "route": "unknown",
    "sql": "WITH traces AS
    (
        SELECT
            trace_id AS id,
            project_id,
            COALESCE(
                nullIf(argMaxIf(e.trace_name, e.event_ts, e.trace_name != ''), ''),
                nullIf(
                    argMaxIf(e.name, e.event_ts, ((e.parent_span_id = '') OR (e.is_app_root = true)) AND (e.name != '')),
                    ''
                )
            ) AS name,
            min(start_time) AS timestamp,
            argMaxIf(environment, event_ts, environment != '') AS environment,
            argMaxIf(version, event_ts, version != '') AS version,
            argMaxIf(session_id, event_ts, session_id != '') AS session_id,
            argMaxIf(user_id, event_ts, user_id != '') AS user_id,
            argMaxIf(input, event_ts, parent_span_id = '') AS input,
            argMaxIf(output, event_ts, parent_span_id = '') AS output,
            argMaxIf(
                mapFromArrays(arrayReverse(e.metadata_names), arrayReverse(e.metadata_values)),
                event_ts,
                parent_span_id = ''
            ) AS metadata,
            min(created_at) AS created_at,
            max(updated_at) AS updated_at,
            sum(total_cost) AS total_cost,
            if(
                max(end_time) IS NULL,
                NULL,
                dateDiff('millisecond', min(start_time), greatest(max(start_time), max(end_time)))
            ) AS latency_milliseconds,
            groupUniqArrayIf(span_id, span_id != '') AS observation_ids,
            length(
                groupUniqArrayIf(span_id, (span_id != '') AND (span_id != concat('t-', trace_id)))
            ) AS observation_count,
            argMaxIf(bookmarked, event_ts, parent_span_id = '') AS bookmarked,
            max(public) AS public,
            argMaxIf(experiment_item_id, event_ts, experiment_item_id != '') AS experiment_item_id,
            sumMap(usage_details) AS usage_details,
            sumMap(cost_details) AS cost_details,
            multiIf(
                arrayExists(x -> (x = 'ERROR'), groupArray(level)),
                'ERROR',
                arrayExists(x -> (x = 'WARNING'), groupArray(level)),
                'WARNING',
                arrayExists(x -> (x = 'DEFAULT'), groupArray(level)),
                'DEFAULT',
                'DEBUG'
            ) AS aggregated_level,
            countIf(level = 'WARNING') AS warning_count,
            countIf(level = 'ERROR') AS error_count,
            countIf(level = 'DEFAULT') AS default_count,
            countIf(level = 'DEBUG') AS debug_count,
            argMaxIf(tags, event_ts, notEmpty(tags)) AS tags,
            argMaxIf(release, event_ts, release != '') AS release,
            argMaxIf(evaluator_id, event_ts, evaluator_id != '') AS evaluator_id,
            argMaxIf(evaluation_rule_id, event_ts, evaluation_rule_id != '') AS evaluation_rule_id,
            any(experiment_id) AS experiment_id
        FROM events_full AS e
        WHERE (e.project_id = {param1:String}) AND (trace_id IN ({param2:Array(String)})) AND (start_time >= ({param3:DateTime64(3)} - toIntervalDay(2)))
        GROUP BY
            trace_id,
            project_id
        ORDER BY timestamp DESC
    )
SELECT
    t.id,
    t.name,
    t.user_id,
    t.release,
    t.version,
    t.project_id,
    t.environment,
    t.public,
    t.bookmarked,
    t.tags,
    t.session_id,
    t.timestamp,
    t.created_at,
    t.updated_at,
    t.metadata,
    0 AS is_deleted,
    t.input,
    t.output
FROM traces AS t
WHERE toDate(t.timestamp) = toDate({param4:DateTime64(3)})
ORDER BY t.timestamp DESC
LIMIT {param5:Int64}",
  },
]
`;

exports[`golden: events point-reads & existence family > getTraceByIdFromEventsTable truncated 1`] = `
[
  {
    "fn": "queryClickhouse",
    "params": {
      "param1": "golden-project",
      "param2": [
        "golden-trace",
      ],
      "param3": 1,
    },
    "route": "unknown",
    "sql": "WITH traces AS
    (
        SELECT
            trace_id AS id,
            project_id,
            COALESCE(
                nullIf(argMaxIf(e.trace_name, e.event_ts, e.trace_name != ''), ''),
                nullIf(
                    argMaxIf(e.name, e.event_ts, ((e.parent_span_id = '') OR (e.is_app_root = true)) AND (e.name != '')),
                    ''
                )
            ) AS name,
            min(start_time) AS timestamp,
            argMaxIf(environment, event_ts, environment != '') AS environment,
            argMaxIf(version, event_ts, version != '') AS version,
            argMaxIf(session_id, event_ts, session_id != '') AS session_id,
            argMaxIf(user_id, event_ts, user_id != '') AS user_id,
            argMaxIf(input, event_ts, parent_span_id = '') AS input,
            argMaxIf(output, event_ts, parent_span_id = '') AS output,
            argMaxIf(
                mapFromArrays(arrayReverse(e.metadata_names), arrayReverse(e.metadata_values)),
                event_ts,
                parent_span_id = ''
            ) AS metadata,
            min(created_at) AS created_at,
            max(updated_at) AS updated_at,
            sum(total_cost) AS total_cost,
            if(
                max(end_time) IS NULL,
                NULL,
                dateDiff('millisecond', min(start_time), greatest(max(start_time), max(end_time)))
            ) AS latency_milliseconds,
            groupUniqArrayIf(span_id, span_id != '') AS observation_ids,
            length(
                groupUniqArrayIf(span_id, (span_id != '') AND (span_id != concat('t-', trace_id)))
            ) AS observation_count,
            argMaxIf(bookmarked, event_ts, parent_span_id = '') AS bookmarked,
            max(public) AS public,
            argMaxIf(experiment_item_id, event_ts, experiment_item_id != '') AS experiment_item_id,
            sumMap(usage_details) AS usage_details,
            sumMap(cost_details) AS cost_details,
            multiIf(
                arrayExists(x -> (x = 'ERROR'), groupArray(level)),
                'ERROR',
                arrayExists(x -> (x = 'WARNING'), groupArray(level)),
                'WARNING',
                arrayExists(x -> (x = 'DEFAULT'), groupArray(level)),
                'DEFAULT',
                'DEBUG'
            ) AS aggregated_level,
            countIf(level = 'WARNING') AS warning_count,
            countIf(level = 'ERROR') AS error_count,
            countIf(level = 'DEFAULT') AS default_count,
            countIf(level = 'DEBUG') AS debug_count,
            argMaxIf(tags, event_ts, notEmpty(tags)) AS tags,
            argMaxIf(release, event_ts, release != '') AS release,
            argMaxIf(evaluator_id, event_ts, evaluator_id != '') AS evaluator_id,
            argMaxIf(evaluation_rule_id, event_ts, evaluation_rule_id != '') AS evaluation_rule_id,
            any(experiment_id) AS experiment_id
        FROM events_core AS e
        WHERE (e.project_id = {param1:String}) AND (trace_id IN ({param2:Array(String)}))
        GROUP BY
            trace_id,
            project_id
        ORDER BY timestamp DESC
    )
SELECT
    t.id,
    t.name,
    t.user_id,
    t.release,
    t.version,
    t.project_id,
    t.environment,
    t.public,
    t.bookmarked,
    t.tags,
    t.session_id,
    t.timestamp,
    t.created_at,
    t.updated_at,
    t.metadata,
    0 AS is_deleted,
    leftUTF8(t.input, 1000) AS input,
    leftUTF8(t.output, 1000) AS output
FROM traces AS t
ORDER BY t.timestamp DESC
LIMIT {param3:Int64}",
  },
]
`;

exports[`golden: events point-reads & existence family > getTraceMetadataByIdsFromEvents traceIds=empty 1`] = `[]`;

exports[`golden: events point-reads & existence family > getTraceMetadataByIdsFromEvents traceIds=set 1`] = `
[
  {
    "fn": "queryClickhouse",
    "params": {
      "param1": "golden-project",
      "param2": [
        "golden-trace",
        "golden-trace-b",
      ],
    },
    "route": "unknown",
    "sql": "SELECT
    e.trace_id AS id,
    COALESCE(
        nullIf(e.trace_name, ''),
        if((e.parent_span_id = '') OR (e.is_app_root = true), nullIf(e.name, ''), NULL)
    ) AS name,
    e.user_id AS user_id,
    e.tags AS tags
FROM events_core AS e
WHERE (e.project_id = {param1:String}) AND (COALESCE(nullIf(e.trace_name, ''), if((e.parent_span_id = '') OR (e.is_app_root = true), nullIf(e.name, ''), NULL)) IS NOT NULL) AND (e.is_deleted = 0) AND (e.trace_id IN ({param2:Array(String)}))
LIMIT 1 BY e.trace_id",
  },
]
`;

exports[`golden: events point-reads & existence family > hasAnySessionFromEventsTable 1`] = `
[
  {
    "fn": "queryClickhouse",
    "params": {
      "param1": "golden-project",
    },
    "route": "unknown",
    "sql": "SELECT 1
FROM events_core
WHERE (project_id = {param1:String}) AND (session_id IS NOT NULL) AND (session_id != '') AND (is_deleted = 0)
LIMIT 1",
  },
]
`;

exports[`golden: events point-reads & existence family > hasAnyTraceFromEventsTable 1`] = `
[
  {
    "fn": "queryClickhouse",
    "params": {
      "param1": "golden-project",
    },
    "route": "unknown",
    "sql": "SELECT 1
FROM events_core
WHERE (project_id = {param1:String}) AND (is_deleted = 0)
LIMIT 1",
  },
]
`;

exports[`golden: events point-reads & existence family > hasAnyUserFromEventsTable 1`] = `
[
  {
    "fn": "queryClickhouse",
    "params": {
      "param1": "golden-project",
    },
    "route": "unknown",
    "sql": "SELECT 1
FROM events_core
WHERE (project_id = {param1:String}) AND (user_id IS NOT NULL) AND (user_id != '') AND (is_deleted = 0)
LIMIT 1",
  },
]
`;

exports[`golden: events simple aggregates family > getLatestSdkVersionInfoFromEvents 1`] = `
[
  {
    "fn": "queryClickhouse",
    "params": {
      "param1": "golden-project",
      "param2": "2025-12-25 00:00:00.000",
      "param3": [
        "langfuse-internal-ai-sdk",
        "langfuse-internal-otel-writer",
        "langfuse-internal-ai-features",
      ],
    },
    "route": "unknown",
    "sql": "SELECT
    e.ingestion_sdk_name AS ingestion_sdk_name,
    e.ingestion_sdk_version AS ingestion_sdk_version,
    e.telemetry_sdk_language AS telemetry_sdk_language,
    min(e.start_time) AS first_seen,
    max(e.start_time) AS last_seen,
    count() AS event_count
FROM events_core AS e
WHERE (e.project_id = {param1:String}) AND (e.start_time >= {param2:DateTime64(3)}) AND (toDate(e.start_time) >= toDate({param2:DateTime64(3)})) AND startsWith(e.source, 'otel') AND (e.ingestion_sdk_name NOT IN ({param3:Array(String)})) AND (e.is_deleted = 0)
GROUP BY
    e.ingestion_sdk_name,
    e.ingestion_sdk_version,
    e.telemetry_sdk_language
ORDER BY last_seen DESC",
  },
]
`;

exports[`golden: events simple aggregates family > getObservationMetricsForPromptsFromEvents time=from+to 1`] = `
[
  {
    "fn": "queryClickhouse",
    "params": {
      "param1": "golden-project",
      "param2": [
        "golden-prompt-id",
        "golden-prompt-id-b",
      ],
      "param3": "2025-12-01 00:00:00.000",
      "param4": "2026-01-02 00:00:00.000",
    },
    "route": "unknown",
    "sql": "WITH prompt_events AS
    (
        SELECT
            e.project_id AS project_id,
            e.prompt_id AS prompt_id,
            e.prompt_version AS prompt_version,
            e.trace_id AS trace_id,
            e.span_id AS span_id,
            e.start_time AS start_time,
            e.end_time AS end_time,
            e.usage_details AS usage_details,
            e.cost_details AS cost_details,
            e.is_deleted AS is_deleted
        FROM events_core AS e
        WHERE (e.project_id = {param1:String}) AND (e.type = 'GENERATION') AND (e.prompt_id IN ({param2:Array(String)})) AND (e.start_time >= {param3:DateTime64(6)}) AND (e.start_time <= {param4:DateTime64(6)})
        ORDER BY e.event_ts DESC
        LIMIT 1 BY
            e.span_id,
            e.project_id
    )
SELECT
    count(*) AS count,
    e.prompt_id AS prompt_id,
    e.prompt_version AS prompt_version,
    min(e.start_time) AS first_observation,
    max(e.start_time) AS last_observation,
    medianExact(
        arraySum(mapValues(mapFilter(x -> (positionCaseInsensitive(x.1, 'input') > 0), e.usage_details)))
    ) AS median_input_usage,
    medianExact(
        arraySum(mapValues(mapFilter(x -> (positionCaseInsensitive(x.1, 'output') > 0), e.usage_details)))
    ) AS median_output_usage,
    medianExact(e.cost_details['total']) AS median_total_cost,
    medianExact(dateDiff('millisecond', e.start_time, e.end_time)) AS median_latency_ms
FROM prompt_events AS e
WHERE e.is_deleted = 0
GROUP BY
    e.prompt_id,
    e.prompt_version
ORDER BY e.prompt_version DESC",
  },
]
`;

exports[`golden: events simple aggregates family > getObservationMetricsForPromptsFromEvents time=unset 1`] = `
[
  {
    "fn": "queryClickhouse",
    "params": {
      "param1": "golden-project",
      "param2": [
        "golden-prompt-id",
        "golden-prompt-id-b",
      ],
    },
    "route": "unknown",
    "sql": "WITH prompt_events AS
    (
        SELECT
            e.project_id AS project_id,
            e.prompt_id AS prompt_id,
            e.prompt_version AS prompt_version,
            e.trace_id AS trace_id,
            e.span_id AS span_id,
            e.start_time AS start_time,
            e.end_time AS end_time,
            e.usage_details AS usage_details,
            e.cost_details AS cost_details,
            e.is_deleted AS is_deleted
        FROM events_core AS e
        WHERE (e.project_id = {param1:String}) AND (e.type = 'GENERATION') AND (e.prompt_id IN ({param2:Array(String)}))
        ORDER BY e.event_ts DESC
        LIMIT 1 BY
            e.span_id,
            e.project_id
    )
SELECT
    count(*) AS count,
    e.prompt_id AS prompt_id,
    e.prompt_version AS prompt_version,
    min(e.start_time) AS first_observation,
    max(e.start_time) AS last_observation,
    medianExact(
        arraySum(mapValues(mapFilter(x -> (positionCaseInsensitive(x.1, 'input') > 0), e.usage_details)))
    ) AS median_input_usage,
    medianExact(
        arraySum(mapValues(mapFilter(x -> (positionCaseInsensitive(x.1, 'output') > 0), e.usage_details)))
    ) AS median_output_usage,
    medianExact(e.cost_details['total']) AS median_total_cost,
    medianExact(dateDiff('millisecond', e.start_time, e.end_time)) AS median_latency_ms
FROM prompt_events AS e
WHERE e.is_deleted = 0
GROUP BY
    e.prompt_id,
    e.prompt_version
ORDER BY e.prompt_version DESC",
  },
]
`;

exports[`golden: events simple aggregates family > getObservationsWithPromptNameFromEvents time=from+to 1`] = `
[
  {
    "fn": "queryClickhouse",
    "params": {
      "param1": "golden-project",
      "param2": [
        "golden-prompt",
        "golden-prompt-b",
      ],
      "param3": "2025-12-01 00:00:00.000",
      "param4": "2026-01-02 00:00:00.000",
    },
    "route": "unknown",
    "sql": "SELECT
    uniq(span_id) AS count,
    prompt_name
FROM events_core
WHERE (project_id = {param1:String}) AND (prompt_name IN ({param2:Array(String)})) AND (prompt_name != '') AND (is_deleted = 0) AND (start_time >= {param3:DateTime64(6)}) AND (start_time <= {param4:DateTime64(6)})
GROUP BY prompt_name",
  },
]
`;

exports[`golden: events simple aggregates family > getObservationsWithPromptNameFromEvents time=unset 1`] = `
[
  {
    "fn": "queryClickhouse",
    "params": {
      "param1": "golden-project",
      "param2": [
        "golden-prompt",
        "golden-prompt-b",
      ],
    },
    "route": "unknown",
    "sql": "SELECT
    uniq(span_id) AS count,
    prompt_name
FROM events_core
WHERE (project_id = {param1:String}) AND (prompt_name IN ({param2:Array(String)})) AND (prompt_name != '') AND (is_deleted = 0)
GROUP BY prompt_name",
  },
]
`;

exports[`golden: events simple aggregates family > getSessionMetricsFromEvents sessionIds=empty 1`] = `[]`;

exports[`golden: events simple aggregates family > getSessionMetricsFromEvents sessionIds=set 1`] = `
[
  {
    "fn": "queryClickhouse",
    "params": {
      "param1": "golden-project",
      "param2": [
        "golden-session",
        "golden-session-b",
      ],
      "param3": 2,
    },
    "route": "unknown",
    "sql": "SELECT
    session_id,
    max(start_time) AS max_timestamp,
    min(start_time) AS min_timestamp,
    groupUniqArray(trace_id) AS trace_ids,
    groupUniqArrayIf(user_id, (user_id IS NOT NULL) AND (user_id != '')) AS user_ids,
    uniq(trace_id) AS trace_count,
    groupUniqArrayArrayIf(tags, notEmpty(tags)) AS trace_tags,
    argMaxIf(environment, event_ts, environment != '') AS environment,
    uniqIf(span_id, parent_span_id != '') AS total_observations,
    dateDiff('second', min(start_time), max(if(isNull(end_time), start_time, end_time))) AS duration,
    sumMap(usage_details) AS session_usage_details,
    sumMap(cost_details) AS session_cost_details,
    arraySum(
        mapValues(mapFilter(x -> (positionCaseInsensitive(x.1, 'input') > 0), sumMap(cost_details)))
    ) AS session_input_cost,
    arraySum(
        mapValues(mapFilter(x -> (positionCaseInsensitive(x.1, 'output') > 0), sumMap(cost_details)))
    ) AS session_output_cost,
    sumMap(cost_details)['total'] AS session_total_cost,
    arraySum(
        mapValues(mapFilter(x -> (positionCaseInsensitive(x.1, 'input') > 0), sumMap(usage_details)))
    ) AS session_input_usage,
    arraySum(
        mapValues(mapFilter(x -> (positionCaseInsensitive(x.1, 'output') > 0), sumMap(usage_details)))
    ) AS session_output_usage,
    sumMap(usage_details)['total'] AS session_total_usage
FROM events_core AS e
WHERE (e.project_id = {param1:String}) AND (session_id IN ({param2:Array(String)})) AND (session_id != '')
GROUP BY session_id
LIMIT {param3:Int32}",
  },
]
`;

exports[`golden: events simple aggregates family > getSessionMetricsFromEvents sessionIds=set+queryFromTimestamp 1`] = `
[
  {
    "fn": "queryClickhouse",
    "params": {
      "param1": "golden-project",
      "param2": [
        "golden-session",
        "golden-session-b",
      ],
      "param3": "2025-12-01 00:00:00.000",
      "param4": 2,
    },
    "route": "unknown",
    "sql": "SELECT
    session_id,
    max(start_time) AS max_timestamp,
    min(start_time) AS min_timestamp,
    groupUniqArray(trace_id) AS trace_ids,
    groupUniqArrayIf(user_id, (user_id IS NOT NULL) AND (user_id != '')) AS user_ids,
    uniq(trace_id) AS trace_count,
    groupUniqArrayArrayIf(tags, notEmpty(tags)) AS trace_tags,
    argMaxIf(environment, event_ts, environment != '') AS environment,
    uniqIf(span_id, parent_span_id != '') AS total_observations,
    dateDiff('second', min(start_time), max(if(isNull(end_time), start_time, end_time))) AS duration,
    sumMap(usage_details) AS session_usage_details,
    sumMap(cost_details) AS session_cost_details,
    arraySum(
        mapValues(mapFilter(x -> (positionCaseInsensitive(x.1, 'input') > 0), sumMap(cost_details)))
    ) AS session_input_cost,
    arraySum(
        mapValues(mapFilter(x -> (positionCaseInsensitive(x.1, 'output') > 0), sumMap(cost_details)))
    ) AS session_output_cost,
    sumMap(cost_details)['total'] AS session_total_cost,
    arraySum(
        mapValues(mapFilter(x -> (positionCaseInsensitive(x.1, 'input') > 0), sumMap(usage_details)))
    ) AS session_input_usage,
    arraySum(
        mapValues(mapFilter(x -> (positionCaseInsensitive(x.1, 'output') > 0), sumMap(usage_details)))
    ) AS session_output_usage,
    sumMap(usage_details)['total'] AS session_total_usage
FROM events_core AS e
WHERE (e.project_id = {param1:String}) AND (session_id IN ({param2:Array(String)})) AND (start_time >= ({param3:DateTime64(3)} - toIntervalDay(2))) AND (session_id != '')
GROUP BY session_id
LIMIT {param4:Int32}",
  },
]
`;
